@@ -15,6 +15,7 @@
         </activity>
 	    <activity android:name="activities.SelectStation" android:label="@string/app_name"/>
 	    <activity android:name="activities.ViewEpisodeInformation" android:label="@string/app_name"/>
+	    <activity android:name="activities.Settings" android:label="@string/app_name"/>
 		<service android:name="media.PlaybackService"></service>
     </application>
     
